<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_title_back" />

    <!-- 昵称修改-->
    <LinearLayout
        android:id="@+id/ll_person_nickname"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <!-- 带有删除的EditText-->
        <yunju.com.huiqitian.vm.widget.MyClearEditText
            android:id="@+id/et_clear_modify"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/btn_default_indent"
            android:cursorVisible="false"
            android:paddingLeft="14dp"
            android:paddingRight="14dp" />

        <!--点击提交修改-->
        <Button
            android:id="@+id/btn_nickname_change_commit"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_register_selector"
            android:text="@string/person_remove_nike_name"
            android:textColor="@color/color_login_btn"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_f5f5f5" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_person_phone_change"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <!-- 显示手机号绑定-->
        <LinearLayout
            android:id="@+id/ll_person_bind_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_f5f5f5"
            android:orientation="vertical"
            android:visibility="gone">

            <!-- 显示绑定的手机号-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_bind_phone_txt_left"

                    android:textColor="@color/color_999999"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/tv_person_bind_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/person_bind_phone_txt_right"
                    android:textColor="@color/color_333333"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- 解除绑定按钮-->
            <Button
                android:id="@+id/btn_person_remove_phone"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/login_register_selector"
                android:text="@string/person_remove_phone"
                android:textColor="@color/color_login_btn"
                android:textSize="16dp" />
        </LinearLayout>

        <!-- 修改绑定手机号界面-->
        <LinearLayout
            android:id="@+id/ll_person_unbind_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="14dp"
                    android:gravity="center_vertical"
                    android:text="@string/person_bind_phone_prompt"
                    android:textColor="@color/color_999999"
                    android:textSize="11dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_bind_phone"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:background="@drawable/bkg_et_bind"
                android:hint="@string/phone_activity_register"
                android:inputType="number"
                android:paddingLeft="12dp"
                android:textColor="@color/et_phone_register"
                android:textSize="16dp" />

            <!--短信验证-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                >
                <!--输入短信验证码-->
                <EditText
                    android:id="@+id/et_bind_code"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/bkg_et_bind"
                    android:hint="@string/message_activity_register"
                    android:inputType="number"
                    android:paddingLeft="12dp"
                    android:textColor="@color/et_phone_register"
                    android:textSize="16dp" />
                <!--获取短信验证码-->
                <Button
                    android:id="@+id/btn_bind_get_code"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/et_register_code"
                    android:layout_weight="1"
                    android:background="@drawable/bkg_register_code"
                    android:text="@string/getcode_activity_register"
                    android:textColor="@color/btn_getMessage_register"
                    android:textSize="16dp" />
            </LinearLayout>
            <!--点击提交绑定-->
            <Button
                android:id="@+id/btn_bind"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/login_register_selector"
                android:text="@string/person_remove_phone"
                android:textColor="@color/color_login_btn"
                android:textSize="16dp" />
        </LinearLayout>

        <!-- 温馨提示-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:orientation="vertical">

            <!-- 温馨提示显示-->
            <TextView
                style="@style/text_prompt_show"
                android:text="@string/tv_prompt" />

            <TextView
                style="@style/text_prompt_show"
                android:text="@string/tv_prompt1" />

            <TextView
                style="@style/text_prompt_show"
                android:text="@string/tv_prompt2" />

            <TextView
                style="@style/text_prompt_show"
                android:text="@string/tv_prompt3" />

            <TextView
                style="@style/text_prompt_show"
                android:text="@string/tv_prompt4" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>