<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!--头部标题-->
    <include layout="@layout/layout_title_back" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:text="@string/message_push_set"
            android:textColor="#333333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/message_push_open_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="17dp"
            android:paddingBottom="@dimen/dimen_6"
            android:paddingLeft="@dimen/dimen_2"
            android:paddingRight="@dimen/dimen_2"
            android:paddingTop="@dimen/dimen_6"
            android:text="@string/message_push_set_open_close"
            android:textColor="#999999"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="#eeeeee"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:text="@string/message_push_set_content"
            android:textColor="#999999"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:text="@string/message_push_sound"
            android:textColor="#333333"
            android:textSize="14sp" />


        <ImageView
            android:id="@+id/iv_message_push_sound"
            android:layout_width="33dp"
            android:layout_height="22dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="17dp"
            android:src="@mipmap/img_indent_button_yes" />
    </RelativeLayout>

</LinearLayout>